# LZW-Compression

./: .gitignore  CMakeLists.txt  main.cpp
include/: AVL_Tree.h  ByteReader.h  ByteWriter.h  Decoder.h  DictionaryNode.h  Encoder.h  Trie.h  Utils.h
src/: AVL_Tree.cpp  ByteReader.cpp  ByteWriter.cpp  Decoder.cpp  DictionaryNode.cpp  Encoder.cpp  Trie.cpp  Utils.cpp
